# kindle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: arc-agi-3-notes.md  arc_agi3_generalization_plan.md  failed_experiments.md  next-steps.md  phase-f-fork-join.md  phase-f-vectorized.md  phase-g-l1-options.md  phase-m6-learnable-reward.md  phase-m7-approach-reward.md  universal-actions.md
docs/stability_runs/: run_001.md
examples/: acrobot.rs  cart_pole.rs  grid_world.rs  mountain_car.rs  multi_env.rs  pendulum.rs  taxi.rs
kindle/: Cargo.toml
kindle-gym/: Cargo.toml
kindle-gym/examples/: acrobot.rs  bench_envs.rs  cart_pole.rs  grid_world.rs  l1_diagnostic.rs  l1_learned_term.rs  mountain_car.rs  multi_env.rs  pendulum.rs  stability_1m.rs  taxi.rs  taxi_credit_probe.rs
kindle-gym/src/: acrobot.rs  cart_pole.rs  grid_world.rs  lib.rs  mountain_car.rs  pendulum.rs  random_walk.rs  taxi.rs
kindle-gym/tests/: stability.rs
kindle/src/: adapter.rs  agent.rs  approach.rs  buffer.rs  coord.rs  credit.rs  diayn.rs  encoder.rs  env.rs  lib.rs  mcts.rs  option.rs  outcome.rs  planner.rs  policy.rs  reward.rs  rnd.rs  v2s_preprocess.rs  value_head.rs  xeps_memory.rs
kindle/src/shaders/: v2s_preprocess.wgsl
kindle/tests/: canaries.rs  opt_parity.rs  reward_signal.rs
python/: Cargo.toml  pyproject.toml
python/examples/: arc_agi3_batch.py  arc_agi3_grpo.py  arc_agi3_multi.py  atari_batch.py  gym_extrinsic.py  lunar_lander.py  lunar_lander_batch.py  lunar_lander_ppo.py  object_features.py
python/kindle/: __init__.py
python/src/: lib.rs
python/tests/: conftest.py  test_gymnasium.py  test_smoke.py
scripts/: cgrun.sh
src/: adapter.rs  agent.rs  buffer.rs  credit.rs  encoder.rs  env.rs  lib.rs  policy.rs  reward.rs  world_model.rs
src/envs/: acrobot.rs  cart_pole.rs  grid_world.rs  mod.rs  pendulum.rs  random_walk.rs  taxi.rs
tests/: canaries.rs  grad_check.rs  opt_parity.rs  reward_signal.rs  stability.rs
