[package]
name = "iris"
version = "0.1.0"
authors = ["Dzmitry Malyshau"]
repository = "https://github.com/kvark/iris"
edition = "2024"
rust-version = "1.88"
description = "Continually self-training RL agent on Meganeura"
license = "MIT"

[dependencies]
meganeura = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = "0.17"
log = "0.4"
env_logger = "0.11"

[[example]]
name = "grid_world"
path = "examples/grid_world.rs"

[[example]]
name = "cart_pole"
path = "examples/cart_pole.rs"
