[workspace]
resolver = "2"
members = ["kindle", "kindle-gym"]
# `python` is an independent maturin-built cdylib (pyo3 extension module).
# It isn't part of the `cargo build --workspace` flow because the
# `extension-module` feature requires linking against libpython.
exclude = ["python"]

# Local meganeura patch for stop_gradient op while it's iterating
# locally; revert when the upstream rev bumps.
[patch."https://github.com/kvark/meganeura"]
meganeura = { path = "../meganeura" }
