[package]
name = "kindle"
version = "0.1.0"
authors = ["Dzmitry Malyshau"]
repository = "https://github.com/kvark/kindle"
edition = "2024"
rust-version = "1.88"
description = "A continually self-training RL agent that starts from a cold network and kindles its own intelligence from environment-agnostic primitives."
license = "MIT"

[dependencies]
meganeura = { git = "https://github.com/kvark/meganeura", rev = "afe01cd" }
# Pinned to the same blade rev meganeura uses (rev `72c30c1`) so cargo
# unifies and `blade_graphics::ExternalMemorySource` round-trips
# cleanly between kindle's bind API and meganeura's
# `Session::bind_external_buffer`. No new transitive dependencies — it
# already pulls in via meganeura.
blade-graphics = { git = "https://github.com/kvark/blade", rev = "72c30c1" }
# `#[derive(ShaderData)]` for the V2-S preprocess compute pipeline's
# bindings struct — same blade rev so derive ↔ trait stay in sync.
blade-macros = { git = "https://github.com/kvark/blade", rev = "72c30c1" }
bytemuck = { version = "1", features = ["derive"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hashbrown = "0.17"
log = "0.4"
env_logger = "0.11"
