[package]
name = "kindle-py"
version = "0.2.0"
authors = ["Dzmitry Malyshau"]
repository = "https://github.com/kvark/kindle"
edition = "2021"
rust-version = "1.88"
description = "Python bindings for the kindle RL agent (built via maturin)."
license = "MIT"
publish = false

[lib]
# Named `_native` to avoid a symbol collision with the `kindle` crate dep.
# The Python-side import path (`kindle._native`) is set in pyproject.toml.
name = "_native"
crate-type = ["cdylib"]

[dependencies]
kindle = { path = "../kindle", version = "0.1" }
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.9"
serde_json = "1"

# Same local override as workspace Cargo.toml.
[patch."https://github.com/kvark/meganeura"]
meganeura = { path = "../../meganeura" }
