[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kindle"
version = "0.2.0"
description = "Python bindings for the kindle RL agent."
authors = [{ name = "Dzmitry Malyshau" }]
license = { text = "MIT" }
requires-python = ">=3.9"
readme = "../README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/kvark/kindle"

[tool.maturin]
module-name = "kindle"
python-source = "."
features = ["pyo3/extension-module"]
